--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
-geoip-server
+
 geoip
-data/**/*.csv
+geoip-server
+data
+GeoLiteCity-latest.zip
+GeoLiteCity-latest.zip.*
